(lang dune 3.14)

(name dummy)

(generate_opam_files true)

(source
 (github username/reponame))

(license LICENSE)

(package
 (name dummy)
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
